--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,1 @@
-<h2>Sentences</h2>
-
-<ul *ngFor="let sentence of sentences">
-  <li>{{ sentence.text }}</li>
-</ul>
+<dl-sentence-component></dl-sentence-component>
